lib/flux/apps/web/github-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-proxy
  labels:
    app.kubernetes.io/name: github-proxy
    app.kubernetes.io/instance: github-proxy
    app.kubernetes.io/component: proxy
    app.kubernetes.io/part-of: web
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: github-proxy
    app.kubernetes.io/instance: github-proxy
