lib/flux/apps/web/github-proxy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-proxy
spec:
  parentRefs: ${gateway_parent_refs}
  hostnames:
    - ${domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: github-proxy
          port: 8080
